--- a/index.html
+++ b/index.html
@@ -185,27 +185,33 @@
                 </div>
                 <ul class="practice-list" id="nouns">
                     <li class="practice-item">
-                        <input type="checkbox" class="checkbox" id="noun-singular-plural">
-                        <label for="noun-singular-plural" class="task-text">
-                            可数名词单复数变化规则
-                        </label>
-                    </li>
-                    <li class="practice-item">
-                        <input type="checkbox" class="checkbox" id="noun-irregular-plural">
-                        <label for="noun-irregular-plural" class="task-text">
-                            不规则复数名词
+                        <input type="checkbox" class="checkbox" id="noun-countable-uncountable">
+                        <label for="noun-countable-uncountable" class="task-text"><a href="https://sandy-long.github.io/pn/" target="_blank">
+                            专有名词or普通名词
                         </label>
                     </li>
                     <li class="practice-item">
                         <input type="checkbox" class="checkbox" id="noun-countable-uncountable">
-                        <label for="noun-countable-uncountable" class="task-text">
-                            可数vs不可数名词用法
+                        <label for="noun-countable-uncountable" class="task-text"><a href="https://sandy-long.github.io/count/" target="_blank">
+                            可数or不可数
+                        </label>
+                    </li>
+					 <li class="practice-item">
+                        <input type="checkbox" class="checkbox" id="noun-countable-uncountable">
+                        <label for="noun-countable-uncountable" class="task-text"><a href="https://sandy-long.github.io/multi/" target="_blank">
+                            单复数
                         </label>
                     </li>
                     <li class="practice-item">
                         <input type="checkbox" class="checkbox" id="noun-collections">
-                        <label for="noun-collections" class="task-text">
+                        <label for="noun-collections" class="task-text"><a href="https://sandy-long.github.io/com/" target="_blank">
                             集合名词和集合表达
+                        </label>
+						</li>
+                    <li class="practice-item">
+                        <input type="checkbox" class="checkbox" id="noun-collections">
+                        <label for="noun-collections" class="task-text"><a href="https://sandy-long.github.io/of/" target="_blank">
+                            ’s 所有格 和 of 所有格
                         </label>
                     </li>
                 </ul>
